# ZenithChat

./: README.md  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 08dcfe024022_pre_final_tables.py  39c98042640e_user_message_chat.py  409f83662733_user_table.py  8892fd187b37_user_table.py  d1597321aad8_chat_is_private_and_password_add.py
app/: main.py  sse_test.html  websocket_manager.py
app/database/: database.py  models.py
app/database/models/: users.py
app/repositories/: chats_repository.py  messages_repository.py  users_repository.py
app/routers/: chats.py  messages.py  users.py
app/serializers/: chats.py  messages.py  users.py
